--- a/.env
+++ b/.env
@@ -1,11 +1,18 @@
 SECRET_KEY=django-insecure-dchotz66bn=h6^*_l$yv#+mc1y=$v0$&=b+c($&e^z29#c9u45
-DEBUG=True
+DEBUG=False
+DB_NAME=hggc
+DB_USER=root
+DB_PASSWORD=eE9DNbhpRi3p7sb
+DB_HOST=localhost
+DB_PORT=3306
 
 EMAIL_BACKEND = django.core.mail.backends.smtp.EmailBackend
-EMAIL_HOST = mail.qrair.co.za
-EMAIL_PORT = 26
+EMAIL_HOST = mail.agrigrowfund.co.za
+EMAIL_PORT = 587
 EMAIL_USE_TLS = False
-EMAIL_HOST_USER = dev@qrair.co.za
-EMAIL_HOST_PASSWORD = Thomas2391!$
+EMAIL_HOST_USER = no-reply@agrigrowfund.co.za
+EMAIL_HOST_PASSWORD = i]b@G?R,yp7O
 
 HOSTS = localhost, 127.0.0.1, 
+
+
