--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-dchotz66bn=h6^*_l$yv#+mc1y=$v0$&=b+c($&e^z29#c9u45
-DEBUG=False
+DEBUG=True
 DB_NAME=hggc
 DB_USER=root
 DB_PASSWORD=eE9DNbhpRi3p7sb
